Release notes
==========================================================


(2012-06-05)

- TghDBConnector class was renamed to TghDBConnector.
- co.SetDBLibClass method was renamed to SetBrokerClass.
- TghDBLib class was renamed to TghDBBroker.
- TghDBSQLdbLib was renamed to TghDBSQLdbBroker.
- TghDBZeosLib was renamed to TghDBZeosBroker.
- gh_dbsqldblib unit was renamed to gh_dbsqldbbroker.
- gh_dbzeoslib unit was renamed to gh_dbzeosbroker.
- Table: methods like Close, Open, First, Next, Select, Where, etc returns the table itself.
- All examples were updated.


----------------------------------------------------------